--- a/Базовый курс/www/css/style.css
+++ b/Базовый курс/www/css/style.css
@@ -14,18 +14,81 @@ body {
     margin: 0 auto;
 }
 
-.nav-link {
-    color: #444444;
+.header {
+    padding-bottom: 214px;
 }
 
-.nav-link.active {
-    color: #30a3f0;
+.title {
+    margin-bottom: 40px;
 }
 
 .info-item, 
 .info-link {
-    color: rgba(255, 255, 255, 0.3);
+    /*color: rgba(255, 255, 255, 0.3);*/
     font-size: 14px;
+}
+
+.info-link {
+    text-decoration: none;
+}
+
+.info-left .info-item {
+    margin-right: 32px;
+}
+
+.info-right .info-item {
+    margin-left: 17px;
+}
+
+.info {
+    display: flex;
+    padding-left: 0;
+    list-style-type: none;
+    align-items: center;
+}
+
+.head {
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 26px 40px 25px;
+    margin-bottom: 220px;
+}
+
+.nav {
+    list-style-type: none;
+    padding-left: 0;
+    display: flex;
+}
+
+.nav-item {
+    margin-left: 8px;
+}
+  
+.nav-link {
+    color: #444444;
+    text-decoration: none;
+    padding: 11px 19px 12px;
+    border: 1px solid transparent;
+}
+
+.nav-link.active {
+    color: #30a3f0;
+    border: 1px solid #30a3f0;
+    border-radius: 5px;
+    padding: 11px 19px 12px;
+}
+
+.nav-link:hover {
+    border: 1px solid #30a3f0;
+    border-radius: 5px;    
+}
+
+.nav-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .title p {
@@ -66,6 +129,26 @@ body {
     border: 1px solid #30a3f0;
     border-radius: 5px;
     padding: 20px 42px;
+}
+
+.page-line {
+    border-bottom: 1px solid #e4e4e4;
+}
+
+.box {
+    display: flex;
+    border-left: 1px solid #e4e4e4;
+    border-right: 1px solid #e4e4e4;
+}
+
+.box-item {
+    flex-basis: 33%;
+    padding: 0 60px 110px;
+}
+
+.box-item-center {
+    border-left: 1px solid #e4e4e4;
+    border-right: 1px solid #e4e4e4;
 }
 
 .box h2 {
