--- a/Базовый курс/www/css/style.css
+++ b/Базовый курс/www/css/style.css
@@ -12,6 +12,7 @@ body {
     width: 100%;
     max-width: 1170px;
     margin: 0 auto;
+    position: relative;
 }
 
 .header {
@@ -175,6 +176,12 @@ body {
     border-bottom: 1px solid #e4e4e4;
 }
 
+.page-gray {
+    background-color: #fafafa;
+    padding-top: 100px;
+    padding-bottom: 62px;
+}
+
 .box {
     display: flex;
     border-left: 1px solid #e4e4e4;
@@ -183,7 +190,7 @@ body {
 
 .box-item {
     flex-basis: 33%;
-    padding: 0 60px 110px;
+    padding: 93px 60px 110px;
 }
 
 .box-item-center {
@@ -202,8 +209,8 @@ body {
     font-size: 30px;
     font-weight: 800;
     font-family: 'Raleway', sans-serif;
-    font-weight: 800;
     text-transform: uppercase;
+    margin-bottom: 14px;
 }
 
 .title-h2 span {
@@ -223,10 +230,161 @@ body {
     background-repeat: no-repeat;
 }
 
+.line-center {
+    display: block;
+    width: 90px;
+    height: 14px;
+    background-image: url(../img/line-center.svg);
+    background-repeat: no-repeat;
+    margin: 0 auto 30px;
+}
+
 .description {
     color: #707070;
+    line-height: 26px;
+}
+
+.page-gray .description{
+    max-width: 690px;
+    margin: 0 auto;
 }
 
 .list-description {
     color: #222222;
+    padding-left: 0;
+    list-style-type: none;
+    margin-top: 40px;
+    margin-bottom: 60px;
+}
+
+.list-description > li {
+    margin-bottom: 27px;
+    color: #222222;
+    padding-left: 37px;
+    position: relative;
+}
+
+.list-description > li::before {
+    content: '';
+    display: block;
+    width: 16px;
+    height: 14px;
+    background-image: url(../img/check.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    left: 0;
+    top: calc(50% - 7px);
+}
+
+.page-mockup {
+    margin-top: 100px;
+    padding-bottom: 100px;
+}
+
+.mockup {
+    display: block;
+    width: 625px;
+    height: 557px;
+    background-image: url(../img/mockup.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: -78px;
+    bottom: 0;
+}
+
+.btn-blue {
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #30a3f0;
+    border: 1px solid #30a3f0;
+    padding: 20px 39px;
+    border-radius: 5px;
+}
+
+.btn-blue:hover {
+    border-color: #e4e4e4;
+    background-color: #e4e4e4;
+    color: #30a3f0;
+}
+
+.box-text {
+    max-width: 530px;
+}
+
+.box-icon {
+    width: 152px;
+    height: 152px;
+    line-height: 3.5;
+    font-size: 40px;
+    color: #222222;
+    background-image: url(../img/gray.png);
+    background-position: center center;
+    margin: 0 auto 26px;
+}
+
+.box-item:hover .box-icon{
+    background-image: url(../img/blue.png);
+    color: #fff;
+}
+
+.box-icon-pen {
+    font-size: 30px;
+    line-height: 4.8;
+}
+
+.photo {
+    display: flex;
+}
+
+.photo-item {
+    overflow: hidden;
+    flex-basis: 20%;
+    height: 350px;
+    position: relative;
+}
+
+.photo-item img {
+    width: 100%;
+    position: absolute;
+    object-fit: cover;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    height: 350px;
+    z-index: -1;
+}
+
+.photo-text {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    top: calc(50% - 30px);
+    display: none;
+}
+
+.photo-text h3 {
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
+    font-size: 22px;
+    font-weight: 700;
+    color: #fff;
+    margin-bottom: 14px;
+}
+
+.photo-text p {
+    color: #707070;
+    margin-bottom: 0;
+}
+
+.photo-item:hover {
+    background-color: rgb(34, 34, 34, 0.8)
+}
+
+.photo-item:hover .photo-text {
+    display: block;
 }
