--- a/Базовый курс/www/css/style.css
+++ b/Базовый курс/www/css/style.css
@@ -337,6 +337,17 @@ body {
     line-height: 4.8;
 }
 
+.box-icon-min {
+    font-size: 24px;
+    width: 96px;
+    height: 96px;
+    background-size: 96px 96px; 
+    flex-basis: 96px;  
+    text-align: center;
+    line-height: 3.8;
+    margin: initial;
+}
+
 .photo {
     display: flex;
 }
@@ -396,16 +407,42 @@ body {
     right: 0;
 }
 
-.photo-btn-item {
-    
+.photo-btn-item {   
     background-color: #fff;
     color: #222222;
-    width: 60px;
-    height: 60px;
-    padding: 22px 22px 22px 22px;
+    background-size: 60px 60px;
 }
 
 .photo-btn-item:hover {
     color: #fff;
     background-color: #30a3f0;
 }
+
+.grid {
+    display: grid;
+    grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
+    grid-gap: 70px 50px;
+}
+
+.grid h3 {
+    font-family: 'Raleway', sans-serif;   
+    font-weight: 600;
+    font-size: 18px;
+    margin-bottom: 22px;
+    margin-top: 0;
+}
+
+.grid .description {
+    margin-bottom: 0;
+}
+
+.grid-line {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.grid-line-text {
+    flex-basis: calc(100% - 126px);
+}
+
