--- a/Базовый курс/www/css/style.css
+++ b/Базовый курс/www/css/style.css
@@ -348,6 +348,11 @@ body {
     margin: initial;
 }
 
+.grid-item:hover .box-icon-min {
+    background-image: url(../img/blue-min.png);
+    color: #fff;
+}
+
 .photo {
     display: flex;
 }
@@ -410,7 +415,7 @@ body {
 .photo-btn-item {   
     background-color: #fff;
     color: #222222;
-    background-size: 60px 60px;
+    padding: 20px 20px;
 }
 
 .photo-btn-item:hover {
@@ -422,6 +427,8 @@ body {
     display: grid;
     grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
     grid-gap: 70px 50px;
+    margin-top: 100px;
+    margin-bottom: 126px;
 }
 
 .grid h3 {
