--- a/Базовый курс/www/css/style.css
+++ b/Базовый курс/www/css/style.css
@@ -165,6 +165,7 @@ body {
     border: 1px solid #30a3f0;
     border-radius: 5px;
     padding: 20px 42px;
+    transition: background-color 0.5s linear, color 0.3s ease;
 }
 
 .btn:hover {
@@ -244,7 +245,8 @@ body {
     line-height: 26px;
 }
 
-.page-gray .description{
+.page-gray .description,
+.page-team .description {
     max-width: 690px;
     margin: 0 auto;
 }
@@ -304,11 +306,12 @@ body {
     border: 1px solid #30a3f0;
     padding: 20px 39px;
     border-radius: 5px;
+    transition: background-color 0.5s ease, color 0.3s linear;
 }
 
 .btn-blue:hover {
-    border-color: #e4e4e4;
-    background-color: #e4e4e4;
+    border-color: #444444;
+    background-color: #444444;
     color: #30a3f0;
 }
 
@@ -453,3 +456,104 @@ body {
     flex-basis: calc(100% - 126px);
 }
 
+.page-bg {
+    background-image: url(../img/banner.png);
+    background-size: cover;
+    padding-top: 110px;
+    padding-bottom: 112px;
+}
+
+.page-bg .title {
+    margin-bottom: 0;
+}
+
+.page-bg .title h1 {
+    margin-bottom: 40px;
+}
+
+.page-bg .element-bottom {
+    margin-top: 53px;
+}
+
+.page-team {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.team {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-top: 60px;
+}
+
+.team-item {
+    flex-basis: 32%;
+}
+
+.team-thumb {
+    margin-bottom: 40px;
+    background-color: rgba(255, 255, 255, 0.5);
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 370px;
+}
+
+.team-thumb img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    z-index: -1;
+}
+
+.team-item:hover .team-thumb {
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.team-position {
+    font-size: 14px;
+    color: #30a3f0;
+    margin-bottom: 14px;
+}
+
+.team-name {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    color: #222222;   
+    margin-bottom: 20px;
+}
+
+.team-social {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.team-social-item {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.team-social-item > a {
+    color: #c9c9c9;
+    text-decoration: none;
+    background-image: url(../img/gray.png);
+    background-size: 40px 40px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    display: block;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 2.8;
+}
+
+.team-social-item > a:hover {
+    color: #ffffff;
+    background-image: url(../img/blue-min.png);
+}
