--- a/Базовый курс/www/css/style.css
+++ b/Базовый курс/www/css/style.css
@@ -180,7 +180,6 @@ body {
 .page-gray {
     background-color: #fafafa;
     padding-top: 100px;
-    padding-bottom: 62px;
 }
 
 .box {
@@ -358,6 +357,7 @@ body {
 
 .photo {
     display: flex;
+    margin-top: 62px;
 }
 
 .photo-item {
@@ -556,4 +556,41 @@ body {
 .team-social-item > a:hover {
     color: #ffffff;
     background-image: url(../img/blue-min.png);
+}
+
+.screen {
+    margin-top: 57px;
+}
+
+.page-stat {
+    background-color: #111111;
+    color: #fff;
+}
+
+.box-stat {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    padding-top: 116px;
+    padding-bottom: 114px;
+}
+
+.box-stat svg {
+    color: #30a3f0;
+    font-size: 60px;
+}
+
+.box-stat h3 {
+    font-weight: 700;
+    font-size: 50px;
+    margin-top: 36px;
+    margin-bottom: 0;
+}
+
+.box-stat h3 span {
+    color: #474747;
+    font-weight: 400;
+    display: block;
+    font-size: 16px;
+    margin-bottom: 24px;
 }
