--- a/Базовый курс/www/css/style.css
+++ b/Базовый курс/www/css/style.css
@@ -867,3 +867,7 @@ body {
     text-decoration: none;
     color: rgba(255, 255, 255, 0.3);
 }
+
+.footer-list > li > a:hover {
+    color: #fff;
+}
