--- a/Продвинутый курс/www/src/views/index.html
+++ b/Продвинутый курс/www/src/views/index.html
@@ -23,6 +23,7 @@
         <link rel="apple-touch-icon" sizes="167x167" href="img/favicons/apple-touch-icon-167x167.png">
         <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
         <link rel="apple-touch-icon" sizes="1024x1024" href="img/favicons/apple-touch-icon-1024x1024.png">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
@@ -55,60 +56,61 @@
                         <small>* Some conditions may applicable</small>
                     </div>
                 </div>
-            </div>      
-            <div class="page">
-                <div class="wrap">
-                    <div class="block-author">
-                        <div class="block-text">
-                            <p class=block-text__name>- Book Author</p>
-                            <h1 class="block-text__title">Emma Anderson<span>A room without books is like a body without a soul</span></h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
-                            <a href="" class="block-text__btn">Read full biography</a>
-                        </div>
-                        <div></div>
-                    </div>
-                    <div class="block-counter">
-                        <p><span>12</span>Total published books</p>
-                        <p><span>5</span>Happy readers</p>
-                        <p><span>15,000</span>Happy readers</p>
-                    </div>
-                </div>        
             </div>
-            <div class="page page_gray">
-                    <div class="wrap">
-                    <h2 class="page__title">Book Contents</h2>
-                    <p class="page__subtitle">Let’s see what we have covered in the book</p>
-                    <div class="block-about">
+        </div>      
+        <div class="page">
+            <div class="wrap">
+                <div class="block-author">
+                    <div class="block-text">
+                        <p class=block-text__name>- Book Author</p>
+                        <h1 class="block-text__title">Emma Anderson<span>A room without books is like a body without a soul</span></h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+                        <a href="" class="block-text__btn">Read full biography</a>
+                    </div>
+                    <div></div>
+                </div>
+                <div class="block-counter">
+                    <p><span>12</span>Total published books</p>
+                    <p><span>5</span>Happy readers</p>
+                    <p><span>15,000</span>Happy readers</p>
+                </div>
+            </div>        
+        </div>
+        <div class="page page_gray">
+                <div class="wrap">
+                <h2 class="page__title">Book Contents</h2>
+                <p class="page__subtitle">Let’s see what we have covered in the book</p>
+                <div class="block-about">
+                    <div>
+                        <h3>About the book</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad minim veniam, quis nostrud exercitation ull amco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillu m dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
                         <div>
-                            <h3>About the book</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad minim veniam, quis nostrud exercitation ull amco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillu m dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-                            <div>
-                                <p>Featured in:</p>
-                                <ul>
-                                    <li><a href=""></a></li>
-                                    <li><a href=""></a></li>
-                                    <li><a href=""></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div>
-                            <h3>Table of contents</h3>
-                            <ol>
-                                <li>1. Lorem ipsum dolor sit amet</li>
-                                <li>2. Consectetur adipisicing elit</li>
-                                <li>3. Labore et dolore magna</li>
-                                <li>4. Consectetur adipisicing elit</li>
-                                <li>5. Labore et dolore magna</li>
-                                <li>6.  Lorem ipsum dolor sit amet</li>
-                                <li>7. Consectetur adipisicing elit</li>
-                                <li>8. Labore et dolore magna</li>
-                                <li>9. Consectetur adipisicing elit</li>
-                                <li>10. Labore et dolore magna</li>
-                            </ol>
-                            <button>More</button>
+                            <p>Featured in:</p>
+                            <ul>
+                                <li><a href=""></a></li>
+                                <li><a href=""></a></li>
+                                <li><a href=""></a></li>
+                            </ul>
                         </div>
                     </div>
+                    <div>
+                        <h3>Table of contents</h3>
+                        <ol>
+                            <li>1. Lorem ipsum dolor sit amet</li>
+                            <li>2. Consectetur adipisicing elit</li>
+                            <li>3. Labore et dolore magna</li>
+                            <li>4. Consectetur adipisicing elit</li>
+                            <li>5. Labore et dolore magna</li>
+                            <li>6.  Lorem ipsum dolor sit amet</li>
+                            <li>7. Consectetur adipisicing elit</li>
+                            <li>8. Labore et dolore magna</li>
+                            <li>9. Consectetur adipisicing elit</li>
+                            <li>10. Labore et dolore magna</li>
+                        </ol>
+                        <button>More</button>
+                    </div>
+                </div>
                 </div>
             </div>            
         </div>
